# ProjektOK

./: .gitignore  CMakeLists.txt  README.md  gameRuleElementaryCA.h  gameRuleGameOfLifeClosedInTorus.cpp  gameRuleGameOfLifeClosedInTorus.h  gameRuleGameOfLifeDefault.cpp  gameRuleGameOfLifeDefault.h  gameRuleRule30.cpp  gameRuleRule30.h  main.cpp
include/: ContinuousGrid2D.h  Grid.h  Grid1D.h  Grid2D.h  Utility.h  config.h  config.h.in  gameRuleElementaryCA.h  gameRuleGameOfLifeClosedInTorus.h  gameRuleGameOfLifeDefault.h  gameRuleRule30.h  rulesetElementaryCA.h  rulesetElementaryLoopedCA.h  rulesetForest.h  rulesetGameOfLifeClosedInTorus.h  rulesetGameOfLifeDefault.h  rulesetTheExpansion.h  rulesetTheExpansionVonNeumann.h
src/: ContinuousGrid2D.cpp  Grid.cpp  Grid1D.cpp  Grid2D.cpp  Utility.cpp  gameRuleElementaryCA.cpp  gameRuleGameOfLifeClosedInTorus.cpp  gameRuleGameOfLifeDefault.cpp  gameRuleRule30.cpp  main.cpp  rulesetElementaryCA.cpp  rulesetElementaryLoopedCA.cpp  rulesetForest.cpp  rulesetGameOfLifeClosedInTorus.cpp  rulesetGameOfLifeDefault.cpp  rulesetTheExpansion.cpp  rulesetTheExpansionVonNeumann.cpp
